--- a/projetos-main/memoria/assets/style/style.css
+++ b/projetos-main/memoria/assets/style/style.css
@@ -1,25 +1,37 @@
-body {
-    background: 75%;
-    margin-left: 510px;
-    margin-top: 20px;
-    margin-right: 400px;
-    background-image:url(../images/tm.png);
+
+.container{
+    width: 100%;
+    height: 98vh;
+    background: url(../images/tm.png) no-repeat;
+    background-attachment: fixed;
+    background-size: 100%;
     background-color: #ebd40a;
     display: block;
+    min-height: 679px;
+    min-width: 400px;
     
    
 }
 
+#gameBoard{
+    text-align: center;
+    width: 83%;
+    margin-left: 12%;
 
+  
+    margin-top: 2%;
+    
+}
 
 .card {
-    width: 150px;
-    height: 150px;
+    width: 15vh;
+    height: 15vh;
     position: relative;
-    margin: 15px;
-    display: inline-block;
+    margin: 12px;
+    display: -webkit-inline-box;
     transform-style: preserve-3d;
     transition: transform .5s;
+    align-items: center;
    
    
 }
@@ -60,7 +72,7 @@ img {
     padding: 30px;
     background-color: rgba(238, 214, 214, 0.9);
     color: rgb(255, 0, 0);
-    font-size: 50px;
+    font-size: 35px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -68,14 +80,15 @@ img {
     flex-direction: column;
     top: 0;
     display: none;
-    margin-right:110px
+    
+    
     
  
     
 }
 
 #restart {
-    padding: 20px;
+    padding: 15px;
     font-size: 20px;
     background-color: rgb(0, 255, 242);
     border: none;
